# rolter

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  ROADMAP.md  TODO.md  _typos.toml  commitlint.config.mjs  deny.toml  docker-compose.yml  justfile  pyproject.toml  release-plz.toml  rolter.example.toml  rolter.toml
.Jules/: bolt.md  palette.md
.config/: commitlint.config.mjs  nextest.toml
.github/: SECURITY.md  actionlint.yaml  coverage-baseline.txt  dependabot.yml  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/config/: gitleaks.toml  release-plz.toml  typos.toml
.github/scripts/: coverage-ratchet.sh
.github/workflows/: audit.yml  ci.yml  docs.yml  engine-integration.yml  labeler.yml  project-automation.yml  publish-bootstrap.yml  quality.yml  release-plz.yml  release.yml  ui-e2e.yml
charts/rolter/: .helmignore  Chart.yaml  README.md  values.yaml
clickhouse/: 001_logs.sql  002_variant.sql  003_health_events.sql  004_trace_id.sql  005_request_payloads.sql  006_prompt_cache_usage.sql  007_mcp_tool_call_logs.sql
crates/rolter/: CHANGELOG.md  Cargo.toml  README.md  rolter.example.toml
crates/rolter-balancer/: CHANGELOG.md  Cargo.toml
crates/rolter-balancer/benches/: pick.rs  trie.rs
crates/rolter-balancer/src/: complexity.rs  lib.rs  scorer.rs  trie.rs
crates/rolter-control/: CHANGELOG.md  Cargo.toml
crates/rolter-control/src/: alerting.rs  analytics.rs  auth.rs  connectors.rs  crud.rs  health.rs  lib.rs  main.rs  mcp_logs.rs  me.rs  proxy.rs  rbac.rs  security.rs  seed.rs
crates/rolter-control/tests/: control_integration.rs
crates/rolter-core/: CHANGELOG.md  Cargo.toml
crates/rolter-core/src/: config.rs  error.rs  guardrail_webhook.rs  guardrails.rs  lib.rs  prompt_templates.rs  slug.rs  telemetry.rs
crates/rolter-gateway/: CHANGELOG.md  Cargo.toml
crates/rolter-gateway/src/: admin_proxy.rs  breaker.rs  budgets.rs  cache.rs  cache_telemetry.rs  cooldowns.rs  error.rs  fake_llm.rs  guardrail_webhook.rs  guardrails.rs  handlers.rs  health.rs  health_events.rs  lib.rs  load.rs  logging.rs  main.rs  metrics.rs  multipart.rs  openapi.rs  prompt_templates.rs  queue.rs  rate_limits.rs  realtime.rs  response_registry.rs  state.rs  status_page.rs  trace.rs  upstream_metrics.rs  watcher.rs
crates/rolter-gateway/tests/: integration.rs  llama_cpp.rs  ollama_cloud.rs  openrouter.rs  tei.rs
crates/rolter-proxy/: CHANGELOG.md  Cargo.toml
crates/rolter-proxy/src/: lib.rs  translation.rs
crates/rolter-store/: CHANGELOG.md  Cargo.toml
crates/rolter-store/migrations/: 0003_config_version_trigger.sql  0006_route_params.sql  0007_virtual_key_cache.sql  0008_ollama_provider.sql  0009_llama_cpp_provider.sql  0010_openrouter_provider.sql  0011_tei_provider.sql  0012_provider_keys_runtime.sql  0013_sessions.sql  0014_provider_slug.sql  0015_user_deactivation.sql  0016_virtual_key_owner.sql  0017_audit_log_org_id.sql  0018_provider_egress_proxies.sql  0019_cache_aware_strategies.sql  0020_virtual_key_provider_allowlist.sql  0021_security_settings.sql  0022_route_advanced_config.sql  0023_observability_connectors.sql  0024_audit_log_pagination.sql  0025_alerting.sql  0026_provider_groups.sql  0027_provider_adapter_kinds.sql
crates/rolter-store/src/: lib.rs  postgres.rs
crates/rolter-store/src/postgres/: crypto.rs  mod.rs  models.rs  repo.rs
crates/rolter/src/: easy_up.rs  main.rs
docker/: Dockerfile  docker-compose.ci.yml  docker-compose.engines.yml  docker-compose.yml
docker/smoke/: smoke.sh  (+1 more)
docs/: README.md  SUMMARY.md  book.toml
integration/: llama-cpp-smoke.sh
integration/e2e/: .gitignore  README.md  conftest.py  docker-compose.e2e.yml  pyproject.toml
integration/e2e/chaos/: rolter-chaos.toml
integration/e2e/mock/: faulty_upstream.py
integration/e2e/rolter_e2e/: __init__.py  bootstrap.py  client.py  rbac.py  stack.py
integration/e2e/tests/: test_balancing.py  test_chaos.py  test_keys.py  test_rbac.py  test_security.py  test_smoke.py
migrations/: 0001_init.sql  0002_provider_key_env.sql  0004_config_version_pricing_limits.sql  0005_weighted_strategy.sql
ui/: .gitignore  Cargo.toml  README.md  changelog.rs  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
ui/.storybook/: main.ts  preview.ts
ui/e2e/: global-setup.ts  seed.ts
ui/e2e/tests/: keys.spec.ts  login.spec.ts  providers.spec.ts  smoke.spec.ts
ui/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
ui/src/components/: CopyButton.tsx  InvocationsPanel.tsx  ModelSheet.tsx  ParamsEditor.tsx  ProviderGroupSheet.tsx  ProviderSheet.tsx  ScopeSwitcher.tsx  ScreenHeader.tsx  screen.tsx
ui/src/components/ui/: badge.stories.tsx  badge.tsx  bar-chart.stories.tsx  bar-chart.tsx  button.stories.tsx  button.tsx  card.stories.tsx  card.tsx  dialog.stories.tsx  dialog.tsx  donut.stories.tsx  donut.tsx  empty-state.stories.tsx  empty-state.tsx  field.tsx  filter-panel.stories.tsx  filter-panel.tsx  heatmap.tsx  icon.tsx  info-hint.tsx  input.stories.tsx  input.tsx  line-chart.stories.tsx  line-chart.tsx  nav-sidebar.stories.tsx  nav-sidebar.tsx  page-header.tsx  scatter-plot.tsx  select.stories.tsx  select.tsx  sheet.stories.tsx  sheet.tsx  skeleton.stories.tsx  skeleton.tsx  sparkline.stories.tsx  sparkline.tsx  stat-card.stories.tsx  stat-card.tsx  status-row.tsx  switch.stories.tsx  (+8 more)
ui/src/lib/: api.ts  auth.tsx  gateway.ts  mock.ts  nav.tsx  scope.ts
ui/src/pages/: Account.tsx  Alerting.tsx  Analytics.tsx  AuditLog.tsx  ComplexityRouter.tsx  Config.tsx  Connectors.tsx  Dashboard.tsx  Health.tsx  Keys.tsx  Limits.tsx  Login.tsx  Logs.tsx  McpCatalog.tsx  McpLogs.tsx  Models.tsx  Playground.tsx  Pricing.tsx  ProviderGroups.tsx  Providers.tsx  Rbac.tsx  RoutingRules.tsx  Security.tsx  Stub.tsx  Teams.tsx  Users.tsx
user-docs/: README.md  docs.json  installation.mdx  introduction.mdx  quickstart.mdx
(+90 files in other folders)
