[workspace]
resolver = "2"
members = [
  "crates/rolter-core",
  "crates/rolter-balancer",
  "crates/rolter-proxy",
  "crates/rolter-store",
  "crates/rolter-auth",
  "crates/rolter-gateway",
  "crates/rolter-control",
  "crates/rolter",
]

[workspace.package]
version = "0.0.5"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ormeilu/rolter"
authors = ["rolter contributors"]
rust-version = "1.82"

[workspace.dependencies]
# async runtime + web
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
tower = "0.5"
tower-http = { version = "0.6", features = [
  "trace",
  "cors",
  "fs",
  "set-header",
] }
hyper = "1"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# errors + logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "env-filter",
  "fmt",
  "json",
] }

# opentelemetry otlp trace export (rolter-core `otlp` feature)
opentelemetry = "0.32"
opentelemetry_sdk = { version = "0.32", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.32", features = [
  "grpc-tonic",
  "http-proto",
  "reqwest-client",
] }
tracing-opentelemetry = "0.33"

# http client for upstream forwarding
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "stream",
  "rustls-tls",
  "http2",
] }
bytes = "1"
futures-util = "0.3"

# config change pub/sub between control plane and gateways
redis = { version = "1.3", default-features = false, features = ["tokio-comp"] }

# concurrency primitives
async-trait = "0.1"
arc-swap = "1"
dashmap = "6"
parking_lot = "0.12"

# misc
rand = "0.10"
ahash = "0.8"
clap = { version = "4", features = ["derive", "env"] }
subtle = "2"

# postgres persistence (rolter-store `postgres` feature)
argon2 = "0.5"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio-rustls",
  "postgres",
  "migrate",
  "uuid",
  "chrono",
  "json",
  "macros",
] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = [
  "serde",
  "clock",
] }

# internal crates
# internal deps carry an explicit version (kept in sync with workspace.package
# by release-plz) so they are not wildcard deps and can publish to crates.io
rolter-core = { path = "crates/rolter-core", version = "0.0.5" }
rolter-balancer = { path = "crates/rolter-balancer", version = "0.0.5" }
rolter-proxy = { path = "crates/rolter-proxy", version = "0.0.5" }
rolter-store = { path = "crates/rolter-store", version = "0.0.5" }
rolter-auth = { path = "crates/rolter-auth", version = "0.0.5" }
rolter-gateway = { path = "crates/rolter-gateway", version = "0.0.5" }
rolter-control = { path = "crates/rolter-control", version = "0.0.5" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
