[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "rolter"
# version is read from crates/rolter-gateway/Cargo.toml by maturin so release-plz
# (which bumps the cargo workspace version) keeps the wheel version in sync.
dynamic = ["version"]
description = "high-performance openai/anthropic-compatible llm proxy and load balancer"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["llm", "proxy", "gateway", "openai", "anthropic", "vllm", "load-balancer"]

[project.urls]
Repository = "https://github.com/ormeilu/rolter"

# maturin builds the rust binary into the wheel so `uv tool install rolter`
# exposes the cli. install maturin first with `uv tool install maturin`.
# note: the wheel currently ships `rolter-gateway`; a unified `rolter` launcher
# that dispatches gateway/control subcommands is tracked in TODO.md.
[tool.maturin]
bindings = "bin"
manifest-path = "crates/rolter-gateway/Cargo.toml"
strip = true
