[package]
name = "rolter-balancer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "pluggable load-balancing strategies for rolter routes"

[dependencies]
rolter-core.workspace = true
parking_lot.workspace = true
ahash.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
criterion.workspace = true

# criterion benches use their own harness; `cargo bench -p rolter-balancer`
# runs them, `cargo bench --no-run` just compiles them (CI guards this)
[[bench]]
name = "pick"
harness = false

[[bench]]
name = "trie"
harness = false
