[package]
name = "rolter-control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "rolter control plane: management api and static ui host"

[[bin]]
name = "rolter-control"
path = "src/main.rs"

[dependencies]
rolter-core.workspace = true
rolter-store.workspace = true
rolter-auth.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
clap.workspace = true
