[package]
name = "rolter-control"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "rolter control plane: management api and static ui host"

[[bin]]
name = "rolter-control"
path = "src/main.rs"

[[bin]]
name = "rolter-seed"
path = "src/bin/seed.rs"
required-features = ["postgres"]

[dependencies]
rolter-core.workspace = true
rolter-store.workspace = true
rolter-auth.workspace = true
rolter-balancer.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true
futures-util.workspace = true
tokio-tungstenite.workspace = true
redis.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
clap.workspace = true
subtle.workspace = true
sqlx = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }

[features]
default = []
postgres = [
  "rolter-store/postgres",
  "dep:sqlx",
  "dep:uuid",
  "dep:argon2",
  "dep:rand",
  "dep:chrono",
]
