[package]
name = "rolter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "shared config model, domain types, errors and telemetry for rolter"

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
