[package]
name = "rolter-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "shared config model, domain types, errors and telemetry for rolter"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
rustls-pki-types.workspace = true

# opentelemetry otlp export, behind the default `otlp` feature so a build can
# opt out of the tonic/prost/reqwest exporter stack when it is not needed
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

[features]
default = ["otlp"]
otlp = [
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "dep:tracing-opentelemetry",
]
