[package]
name = "rolter-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "rolter data-plane gateway (openai/anthropic-compatible proxy)"

[[bin]]
name = "rolter-gateway"
path = "src/main.rs"

[dependencies]
rolter-core.workspace = true
rolter-balancer.workspace = true
rolter-proxy.workspace = true
rolter-auth.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
reqwest.workspace = true
bytes.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
arc-swap.workspace = true
anyhow.workspace = true
tracing.workspace = true
clap.workspace = true
