[package]
name = "rolter-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "upstream provider forwarding and translation for rolter"

[dependencies]
rolter-core.workspace = true
reqwest.workspace = true
bytes.workspace = true
serde_json.workspace = true
dashmap.workspace = true
