[package]
name = "rolter-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "upstream provider forwarding and translation for rolter"

[dependencies]
rolter-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
bytes.workspace = true
serde_json.workspace = true
dashmap.workspace = true
futures-util.workspace = true

[dev-dependencies]
tokio-rustls = { version = "0.26", default-features = false, features = [
  "logging",
  "ring",
  "tls12",
] }
