[package]
name = "rolter-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "repository traits and storage backends for rolter"

[dependencies]
rolter-core.workspace = true
async-trait.workspace = true
parking_lot.workspace = true

# postgres / redis / clickhouse backends land behind feature flags; see ROADMAP
[features]
default = []

[dev-dependencies]
tokio = { workspace = true }
