[package]
name = "rolter-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "repository traits and storage backends for rolter"

[dependencies]
rolter-core.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
sqlx = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
aes-gcm = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# postgres / redis / clickhouse backends land behind feature flags; see ROADMAP
[features]
default = []
postgres = [
  "sqlx",
  "sqlx/json",
  "uuid",
  "chrono",
  "serde",
  "serde_json",
  "aes-gcm",
  "sha2",
  "tracing",
]

[dev-dependencies]
tokio = { workspace = true }
